--- a/domain.yml
+++ b/domain.yml
@@ -1,28 +1,26 @@
 # FQDN of your domain
-dns_name: hunter.lab
+dns_name: aptc.lab
 
 # Hostname of the domain controller
-dc_name: DC-1
+dc_name: DC1
 
 # Credentials of the initial domain admin
 initial_domain_admin:
-  username: hunter
-  password: Hunt3r123.
+  username: admin
+  password: P@ssw0rd
 
 organizational_units: {}
 
 # Domain users - by default, password := username
 users:
-- username: christophe
-- username: brent
-- username: dany
-  password: Dany123
-- username: karen
+- username: admin
+- username: user
+  password: P@ssw0rd
 
 # Domain groups
 groups:
-- dn: CN=Hunters,CN=Users
-  members: [christophe, dany]
+- dn: CN=Admins,CN=Users
+  members: [admin, user]
 
 # Credentials of the local admin created on all workstations
 default_local_admin:
@@ -31,10 +29,8 @@ default_local_admin:
 
 # Workstations to create and to domain-join
 workstations:
-- name: XTOF-WKS
-  local_admins: [christophe]
-- name: DANY-WKS
-  local_admins: [dany]
+- name: WKS1
+  local_admins: [admin, user]
 
 # Should the Windows firewall be enabled?
 enable_windows_firewall: no
